feat : add redis config and sms verification requset api